--- a/public/Welcome.html
+++ b/public/Welcome.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>StudyVerse-The ultimate exam companion</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styleWelcome.css">
   <link href="https://db.onlinewebfonts.com/c/f1195bbd6aaa8a862f7ab23d4c363f3e?family=SofiaRoughBlackInline" rel="stylesheet">
 
 </head>
